# OpenKDSim

./: Cargo.toml  README.md  dev.sh  filename  test.py  todo.txt
scripts/: fix  watch
src/: camera.rs  collision.rs  constants.rs  debug.rs  delegates.rs  ending.rs  fx_ids.rs  gamestate.rs  global.rs  globalstate.rs  input.rs  katamari.rs  lib.rs  macros.rs  main.rs  math.rs  mission.rs  mono_data.rs  name_prop_config.rs  player.rs  preclear.rs  preclear_mode.rs  prince.rs  prop.rs  prop_motion.rs  props.rs  savestate.rs  simulation_params.rs  stage.rs  tutorial.rs  util.rs  vsmode.rs
src/collision/: aabb.rs  hit_attribute.rs  mesh.rs  raycast_state.rs  util.rs
src/debug/: draw.rs  mod.rs
src/delegates/: has_delegates.rs  mod.rs  sound_id.rs  vfx_id.rs
src/global/: mod.rs  rng.rs
src/katamari/: collision.rs  mesh.rs
src/mission/: config.rs  ending.rs  gamemode.rs  mod.rs  stage.rs  state.rs  tutorial.rs  vsmode.rs
src/player/: animation.rs  camera.rs  constants.rs  input.rs  katamari.rs  mod.rs  prince.rs
src/player/camera/: debug.rs  mod.rs  mode.rs  params.rs  preclear.rs
src/player/katamari/: collision.rs  debug.rs  flags.rs  mesh.rs  mod.rs  params.rs  scaled_params.rs  spline.rs  velocity.rs
src/player/katamari/collision/: hit.rs  (+3 more)
src/player/prince/: animation.rs  debug.rs  mod.rs  params.rs
src/prop/: aabb.rs
src/props/: comments.rs  config.rs  debug.rs  mod.rs  params.rs  prop.rs
src/props/motion/: alt_action.rs  behavior.rs  global_path.rs  mod.rs  name_idx.rs
src/props/random/: data.rs  mod.rs
src/util/: color.rs  mod.rs  spline.rs
(+10 files in other folders)
