[package]
name = "openkdsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="openkdsim"
crate-type=["cdylib"]

[[bin]]
name = "openkdsim_test"
path = "src/main.rs"

[dependencies]
static_init = "1.0.3"
lazy_static = "1.4.0"
gl_matrix = "0.0"
